# qr-based-user-authentication-system

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
test/: conftest.py  test_flake8.py  test_user_authorization.py
user_authorization/: user_authorization.py
