<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>user_authorization</name>
  <version>0.0.0</version>
  <description>ROS 2 node for QR-based user authentication from camera input with topic-driven auth state publishing.</description>
  <maintainer email="kar8299s@hs-coburg.de">Karthik Chowdary Nunna</maintainer>
  <license>Proprietary</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
